--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -15,6 +15,7 @@
 	<h:outputScript library="js" name="binary.js" />
 	<h:outputScript library="js" name="iin.js" />
 	<h:outputScript library="js" name="main.js" />
+	<title>${param['stationCode']} - ${param['deviceCode']}</title>
 </h:head>
 
 <h:body>
