Added indicies to the points on the web page.

--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -55,7 +55,7 @@
 							<p:panel header="Binary Input">
 								<p:panelGrid style="margin: auto; text-align: right;" columns="2">
 									<c:forEach var="point" items="#{uiPointDatabase.getBinaryInputDataPoints(param['stationCode'], param['deviceCode'])}">
-										<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryInput point="#{point}" />
+										<h:outputText style="margin-right: 10px" value="#{point.name} (#{point.index})" /><jdnp3:binaryInput point="#{point}" />
 									</c:forEach>
 								</p:panelGrid>
 							</p:panel>
@@ -66,7 +66,7 @@
 							<p:panel header="Binary Output">
 								<p:panelGrid style="margin: auto; text-align: right;" columns="2">
 									<c:forEach var="point" items="#{uiPointDatabase.getBinaryOutputDataPoints(param['stationCode'], param['deviceCode'])}">
-										<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryOutput point="#{point}" />
+										<h:outputText style="margin-right: 10px" value="#{point.name} (#{point.index})" /><jdnp3:binaryOutput point="#{point}" />
 									</c:forEach>
 								</p:panelGrid>
 							</p:panel>
@@ -77,7 +77,7 @@
 							<p:panel header="Analog Input">
 								<p:panelGrid style="margin: auto; text-align: right;" columns="2">
 									<c:forEach var="point" items="#{uiPointDatabase.getAnalogInputDataPoints(param['stationCode'], param['deviceCode'])}">
-										<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:analogInput point="#{point}" />
+										<h:outputText style="margin-right: 10px" value="#{point.name} (#{point.index})" /><jdnp3:analogInput point="#{point}" />
 									</c:forEach>
 								</p:panelGrid>
 							</p:panel>
@@ -88,7 +88,7 @@
 							<p:panel header="Analog Output">
 								<p:panelGrid style="margin: auto; text-align: right;" columns="2">
 									<c:forEach var="point" items="#{uiPointDatabase.getAnalogOutputDataPoints(param['stationCode'], param['deviceCode'])}">
-										<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:analogOutput point="#{point}" />
+										<h:outputText style="margin-right: 10px" value="#{point.name} (#{point.index})" /><jdnp3:analogOutput point="#{point}" />
 									</c:forEach>
 								</p:panelGrid>
 							</p:panel>
