Removed the dependency on the query string on the remote API.  It is now a pure JSON interface.

--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -20,6 +20,11 @@
 </h:head>
 
 <h:body>
+	<script type="text/javascript">
+		var site = '${param['stationCode']}';
+		var device = '${param['deviceCode']}';
+	</script>
+
 	<f:facet name="last">
 		<h:outputStylesheet library="css" name="general.css" />
 	</f:facet>
